@startuml
title Diagramme de classes - Sprint 4 : Progression, contact et certification

skinparam backgroundColor #FFFFFF
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam dpi 160
skinparam nodesep 70
skinparam ranksep 80

skinparam class {
  BackgroundColor #E8F4F8
  BorderColor #0078D4
  ArrowColor #0078D4
  FontColor #000000
  FontSize 11
}

left to right direction

class User {
  + id : int
  + prenom : string
  + nom : string
  + email : string
  + role : enum [admin, formateur, apprenant]
  --
  + consulterProgression() : void
  + consulterBadges() : void
  + envoyerMessage() : void
  + telechargerCertificat() : void
}

class Formation {
  + id : int
  + formateur_id : int
  + titre : string
  + description : text
  + categorie : string
  + niveau : string
  + statut : string
  --
  + modules() : Collection
  + inscriptions() : Collection
  + certificats() : Collection
}

class ProgressionFormation {
  + id : int
  + user_id : int
  + formation_id : int
  + pourcentage_global : int
  + modules_completes : int
  + contenus_completes : int
  + complete : boolean
  + termine_le : datetime
  --
  + user() : User
  + formation() : Formation
  + calculerProgression() : int
}

class Badge {
  + id : int
  + code : string
  + nom : string
  + description : string
  + icone : string
  + condition : string
  --
  + utilisateurs() : Collection
  + attribuerBadge(userId) : void
}

class Message {
  + id : int
  + formation_id : int
  + sender_id : int
  + receiver_id : int
  + contenu : text
  + type : string
  + media_url : string
  + lu_formateur : boolean
  --
  + sender() : User
  + receiver() : User
  + formation() : Formation
}

class CallSignalingService <<service>> {
  + voiceOffer() : void
  + videoOffer() : void
  + answer() : void
  + iceCandidate() : void
  + endCall() : void
  + rejectCall() : void
}

class Certificat {
  + id : int
  + numero : string
  + user_id : int
  + formation_id : int
  + moyenne : float
  + mention : string
  + emis_le : datetime
  --
  + user() : User
  + formation() : Formation
  + generer() : void
  + verifier(numero) : boolean
}

User "1" -- "0..*" ProgressionFormation : suit
Formation "1" -- "0..*" ProgressionFormation : progression

User "0..*" -- "0..*" Badge : obtient

User "1" -- "0..*" Message : envoie
User "1" -- "0..*" Message : reçoit
Formation "1" -- "0..*" Message : discussion

User ..> CallSignalingService : appel vocal / vidéo
CallSignalingService ..> User : signalisation

User "1" -- "0..*" Certificat : obtient
Formation "1" -- "0..*" Certificat : certifie

Formation "1" -- "0..*" User : apprenants inscrits

@enduml